TopicLeadershipDistributionGoal.actionAcceptance should also check the other replica in a swap